fix menu background on Firefox

--- a/assets/sass/_navigation.scss
+++ b/assets/sass/_navigation.scss
@@ -15,8 +15,14 @@ nav {
   list-style: none;
   padding: 0;
   margin: 0;
-  background: hsla(var(--clr-white), 100%, 100%, 0.05);
-  backdrop-filter: blur(1.5rem);
+  // HACK not nice, but effective on Firefox
+  background-color: rgba(0, 0, 0, 0.90);
+
+  @supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+      background: hsla(var(--clr-white), 100%, 100%, 0.05);
+      -webkit-backdrop-filter: blur(1.5rem);
+      backdrop-filter: blur(1.5rem);
+  }
 }
 
 .primary-navigation a {
